--- a/src/index.css
+++ b/src/index.css
@@ -84,11 +84,11 @@ a {
  font-weight: bold;   
 }
 
-.weather-forecast-container {
+.weather-forecast {
     margin-top: 20px;
     text-align: center;
-    color: #000;
     display: flex;
+    color: #000;
 }
 
 .weather-forecast-date {
@@ -101,7 +101,11 @@ a {
 }
 
 .weather-forecast-temperature {
-    font-size: 13px;
+    font-size: 18px;
+}
+
+.weather-forecast-icon {
+    font-size: 36px;
 }
 
 footer {
